--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.context-path=/demows
+
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
@@ -19,3 +21,5 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database.
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
