subiendo algunos cambios

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<artifactId>demows</artifactId>
 	<version>1</version>
 	<packaging>war</packaging>
+	
+	<!-- Must inherit from the Spring Boot parent POM. -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -17,7 +19,7 @@
 		<start-class>ec.edu.utpl.demows.Application</start-class>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.6</java.version>
 	</properties>
 
 	<dependencies>
@@ -66,11 +68,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		
 
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- Spring Boot plugin enables: spring-boot:run -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
